--- a/package.json
+++ b/package.json
@@ -33,35 +33,30 @@
     "@types/react-dom": "~16.8",
     "@types/react-redux": "~5",
     "cross-env": "~5",
-    "husky": "^2.6.0",
-    "lint-staged": "^9.2.0",
+    "husky": "~2.6",
+    "lint-staged": "~9.2",
     "react": "~16.8",
     "react-dom": "~16.8",
-    "react-redux": "~5",
+    "react-redux": "~7.1",
     "redux": "~4",
-    "ts-jest": "^23.10.4",
+    "ts-jest": "~23",
     "ts-loader": "~5",
     "tsconfig-paths-webpack-plugin": "~3.0",
     "tslint": "~5",
-    "tslint-config-airbnb": "^5.11.1",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-react": "^4.0.0",
-    "tslint-react-hooks": "^2.1.1",
-    "typescript": "^3.5.3",
-    "webpack": "^4.26.0",
-    "webpack-bundle-analyzer": "^3.0.3",
+    "tslint-config-airbnb": "~5.11",
+    "tslint-config-prettier": "~1.18",
+    "tslint-eslint-rules": "~5.4",
+    "tslint-react": "~4.0",
+    "tslint-react-hooks": "~2.1",
+    "typescript": "~3.5",
+    "webpack": "~4.26",
+    "webpack-bundle-analyzer": "~3.0",
     "webpack-cli": "~3"
   },
   "peerDependencies": {
-    "@dcm/dictionary": "^0.0.18",
-    "@dcm/jsonapi": "^0.0.26",
-    "axios": "~0",
     "react": "~16.8",
     "react-dom": "~16.8",
-    "react-redux": "~5",
-    "redux": "~4",
-    "ufs-ui": "~5",
-    "ufs-workflow-ui": "~1"
+    "react-redux": "~7.1",
+    "redux": "~4"
   }
 }
